# gd-gen

./: CMakeLists.txt
src/: main.cpp
src/generator/: generator.h
